--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,33 +1,54 @@
-<header class="site-header">
+<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">    
+  <symbol id="svg-search" viewBox="0 0 24 24">
+    <title>Search</title>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search">
+      <circle cx="11" cy="11" r="8"></circle><line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+    </svg>
+  </symbol>
+  <symbol id="svg-menu" viewBox="0 0 24 24">
+    <title>Menu</title>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu">
+      <line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line>
+    </svg>
+  </symbol>
+</svg>
 
+<header class="site-header" x-data="{ open: false }">
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
     <nav class="site-nav">
-      <a href="#" class="menu-icon">
-        <svg viewBox="0 0 18 15">
-          <path fill="#424242" d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.031C17.335,0,18,0.665,18,1.484L18,1.484z"/>
-          <path fill="#424242" d="M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0c0-0.82,0.665-1.484,1.484-1.484 h15.031C17.335,6.031,18,6.696,18,7.516L18,7.516z"/>
-          <path fill="#424242" d="M18,13.516C18,14.335,17.335,15,16.516,15H1.484C0.665,15,0,14.335,0,13.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.031C17.335,12.031,18,12.696,18,13.516L18,13.516z"/>
+      <div class="site-title">
+        <a href="{{ site.baseurl }}/">{{ site.title }}</a>
+      </div>
+
+      <div class="menu-icon">
+      <a href="#" x-on:click.prevent="open = !open">
+        <svg viewBox="0 0 24 24">
+          <use xlink:href="#svg-menu"></use>
         </svg>
       </a>
+      </div>
 
-      <div class="trigger">
+      <div class="nav-links" x-bind:class="{ 'nav-links-open': open }" x-on:click.away="open = false">
         {% for link in site.data.nav %}
 
-          {% assign link_url = link.url | append:"/" %}
-          {% if link_url == page.url %}
-          {% assign current_class = "current" %}
-          {% else %}
-          {% assign current_class = "" %}
-          {% endif %}
+          {%- assign link_url = link.url | append:"/" -%}
+          {%- if link_url == page.url -%}
+          {%- assign current_class = "current" -%}
+          {%- else -%}
+          {%- assign current_class = "" -%}
+          {%- endif -%}
 
-          <a class="page-link {{ current_class }} {% if link.class %}{{ link.class }}{% endif %}" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>          
+          <a class="nav-link {{ current_class }} {% if link.class %}{{ link.class }}{% endif %}" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>          
         {% endfor %}
+
+        <a class="nav-link nav-link-search" href="{{ '/search' | prepend: site.baseurl }}">
+          <svg viewBox="0 0 24 24">
+            <use xlink:href="#svg-search"></use>
+          </svg>
+        </a>
       </div>
     </nav>
 
   </div>
-
 </header>
