Redesign with modern CSS (#6)
Redesign site with modern CSS (flexbox, grids). Also includes set of utility SCSS functions inspired by Tailwind CSS

--- a/_includes/doctree.html
+++ b/_includes/doctree.html
@@ -1,41 +1,71 @@
-{% if include.doctree %}
-    {% assign doctree = site.data[include.doctree] %}
-{% else %}
-    {% assign doctree = site.data[page.doctree] %}
-{% endif %}
+{%- if include.doctree -%}
+    {%- assign doctree = site.data[include.doctree] -%}
+{%- else -%}
+    {%- assign doctree = site.data[page.doctree] -%}
+{%- endif -%}
 
-{% if include.level %}
-    {% assign level = include.level %}
-{% else %}
-    {% assign level = 4 %}
-{% endif %}
-{% capture title_level %}{{ level | minus:1 }}{% endcapture %}
+{%- if include.section_headings -%}
+  {%- assign section_tag = 'div' -%}
+  {%- capture section_title_tag -%}h{{ include.section_headings }}{%- endcapture -%}  
+  {%- if include.title -%}
+    {%- capture title_tag -%}h{{ include.section_headings | minus: 1 }}{%- endcapture -%}
+  {%- endif -%}
+{%- else -%}
+  {%- assign section_tag = 'li' -%}
+  {%- assign section_title_tag = 'div' -%}
+  {%- if include.title -%}
+    {%- capture title_tag -%}{{ include.title }}{%- endcapture -%}
+  {%- endif -%}
+{%- endif -%}
+
 
 {% if include.title %}
-<h{{title_level}} {% if include.alpinejs %}x-spread="title"{% endif %}>{{ doctree.title }}&nbsp;&nbsp; </h{{title_level}}>
+  <{{ title_tag }} class="doc-title" {% if include.title_widget %}x-on:click="open = !open"{% endif %}>
+    {%- if include.section_widget -%}
+      <div class="doc-title-expander" x-bind:class="{ 'doc-title-expander-open': open }">
+        <svg viewBox="0 0 24 24"><use xlink:href="#svg-expander"></use></svg>
+      </div>
+    {%- endif -%}
+    <span>{{ doctree.title }}</span>
+  </{{ title_tag }}>
 {% endif %}
 
-<div class="doc-sections" {% if include.alpinejs %}x-spread="sections" x-cloak {% endif %}>
+<div class="doc-sections" {% if include.title_widget %}x-bind:class="{ 'doc-sections-open': open }"{% endif %}>
+  {%- unless include.section_headings -%}
+  <ul>
+  {%- endunless -%}
     {% for section in doctree.sections %}
-    <div class="doc-section">
-        <h{{level}} id="{{ section.title | replace:' ','-' | downcase }}">{{ section.title }}</h{{level}}>
+      {%- assign section_current = false -%}
+      {%- assign page_id_size = page.url | size | minus: 1 -%}
+      {%- assign page_id = page.url | slice: 0, page_id_size | remove_first: "/docs/" -%}
+      {%- if section.docs contains page_id -%}
+        {%- assign section_current = true -%}
+      {%- endif -%}
+      <{{ section_tag }} class="doc-section" {% if include.section_widget %}x-data="{ open: {{section_current}} }" x-bind:class="{ 'doc-section-current': open }"{% endif %}>
+        <{{ section_title_tag }} class="doc-section-title"
+          {% if include.section_headings %}id="{{ section.title | slugify }}"{% endif %}
+          {% if include.section_widget %}x-on:click="open = !open"{% endif %}
+        >
+          {% if include.section_widget %}<div class="doc-section-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-expander"></use></svg></div>{% endif %}
+          <div class="doc-section-title-text">{{ section.title }}</div>
+        </{{ section_title_tag }}>
 
         <ul>
-        {% for item in section.docs %}
-            {% assign item_url = item | prepend:"/docs/" | append:"/" %}
-            {% if item_url == page.url %}
-                {% assign cls = "current" %}
-            {% else %}
-                {% assign cls = "" %}
-            {% endif %}
-            {% for p in site.docs %}
-                {% if p.url == item_url %}
-                    <li class="{{ cls }}"><a href="{{ site.url }}{{ p.url }}">{{ p.title }}</a></li>
-                    {% break %}
-                {% endif %}
-            {% endfor %}
-        {% endfor %}
+          {% for item in section.docs %}
+            {%- assign item_url = item | prepend:"/docs/" | append:"/" -%}
+            {%- if item_url == page.url -%}
+              {%- assign item_class = "current" -%}
+            {%- else -%}
+              {%- assign item_class = "" -%}
+            {%- endif -%}
+            {%- assign p = site.docs | where: "url", item_url | first -%}
+            <li class="doc-item {{ item_class }}"><a href="{{ p.url }}">{{ p.title }}</a></li>
+          {% endfor %}
         </ul>
-    </div>
+      </{{ section_tag }}>
     {% endfor %}
+
+  {%- unless include.section_headings -%}
+  </ul>
+  {%- endunless -%}
 </div>
