--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -4,37 +4,85 @@
   {% include head.html %}
 
   <body>
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+      <!-- https://feathericons.com/ -->
+      <symbol id="svg-warning" viewBox="0 0 24 24">
+        <title>Warning</title>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-alert-triangle">
+          <path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"></path><line x1="12" y1="9" x2="12" y2="13"></line><line x1="12" y1="17" x2="12.01" y2="17"></line>
+        </svg>
+      </symbol>
+      <symbol id="svg-note" viewBox="0 0 24 24">
+        <title>Note</title>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-info">
+          <circle cx="12" cy="12" r="10"></circle><line x1="12" y1="16" x2="12" y2="12"></line><line x1="12" y1="8" x2="12.01" y2="8"></line>
+        </svg>
+      </symbol>
+      <symbol id="svg-error" viewBox="0 0 24 24">
+        <title>Error</title>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x-circle">
+          <circle cx="12" cy="12" r="10"></circle><line x1="15" y1="9" x2="9" y2="15"></line><line x1="9" y1="9" x2="15" y2="15"></line>
+        </svg>
+      </symbol>
+      <symbol id="svg-expander" viewBox="0 0 24 24">
+        <title>Expand</title>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-down">
+          <polyline points="6 9 12 15 18 9"></polyline>
+        </svg>
+      </symbol>
+    </svg>
 
     {% include header.html %}
-    {% include doc_header.html %}
 
     <div class="page-content">
       <div class="wrapper">
-        <div class="post doc">
+        {% unless page.hide_doc_header %}
+          <div class="sidebar-container">          
+            <div class="sidebar" x-data="{ open: false }">
+            
+              <nav class="doc-doctree">
+              {% include doctree.html title='h2' title_widget=true section_widget=true %}
+              </nav>
+            </div>
+          {% endunless %}
+          <main class="post doc">
 
-          <header class="post-header">
-            <h1 class="post-title">{{ page.title }}</h1>
-          </header>
+            <header class="post-header">
+              <h1 class="post-title">{{ page.title }}</h1>
+            </header>
 
-          {% if site.github.repository_url %}
-          <div class="edit-docs">
-          <a href="{% github_edit_link %}" title="Help improve our documentation!">Edit this page in GitHub</a>
-          </div>
-          {% endif %}
+            <article class="post-content">
+              {{ content }}
+            </article>
 
-          <article class="post-content">
-            {{ content }}
-          </article>
+            {% if site.github.repository_url %}
+            <footer class="edit-docs">
+            <a href="{% github_edit_link %}" title="">Edit this page in GitHub</a>
+            </footer>
+            {% endif %}
 
-        </div>
+          </main>
+        {% unless page.hide_doc_header %}</div>{% endunless %}
       </div>
     </div>
 
     {% include footer.html %}
 
     <script type="text/javascript">
+        // Add anchors
         anchors.add('.doc h2, .doc h3, .doc h4');
         anchors.remove('.doc-toc h4');
+
+        // Add note icons
+        ['error', 'warning', 'note'].forEach((cls) => {
+            let notes = document.querySelectorAll('.doc .' + cls);
+            notes.forEach((note) => {
+                if (note.hasAttribute('data-note')) return;
+                note.innerHTML = '<div class="note-icon"><svg viewBox="0 0 24 24"><use xlink:href="#svg-' + cls + '"></use></svg></div>'
+                    + '<div class="note-content">' + note.innerHTML + '</div>';
+                note.setAttribute('data-note', '');
+            })
+        });
     </script>
 
   </body>
