--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,463 +1,52 @@
 /**
- * Site header
+ * Wrappers
  */
-.site-header {
-    background-color: $grey-color-dark;
-    color: $grey-color-light;
-    min-height: 56px;
+.wrapper {
+  width: 100%;
+  @include margin-x(auto);
+  @include padding-x(4);
 
-    // Positioning context for the mobile navigation icon
-    position: relative;
-}
-
-.site-title {
-    color: #ffffff;
-    font-size: $large-font-size;
-    text-transform: uppercase;
-    line-height: 56px;
-    margin-bottom: 0;
-    float: left;
-
-    &,
-    &:visited {
-        color: #ffffff;
-    }
-}
-
-.site-nav {
-    float: right;
-
-    .menu-icon {
-        display: none;
-    }
-
-    .page-link {
-        color: #ffffff;
-        line-height: 56px;
-        display: inline-block;
-        padding: 0 10px;
-    }
-    
-    .page-link.fa:hover {
-        text-decoration: none;
-    }
-
-    .current {
-        background-color: $background-color;
-        color: $grey-color-dark;
-    }
-
-    .menu-download {
-        background: linear-gradient(to bottom, $brand-color-light 0%, $brand-color 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
-        color: #ffffff !important;
-    }
-
-    @include media-query($on-palm) {
-        position: absolute;
-        top: 9px;
-        right: 30px;
-        background-color: $grey-color-dark;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
-        text-align: right;
-
-        .menu-icon {
-            display: block;
-            float: right;
-            width: 36px;
-            height: 26px;
-            line-height: 0;
-            padding-top: 10px;
-            text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-light;
-                }
-            }
-        }
-
-        .trigger {
-            clear: both;
-            display: none;
-        }
-
-        &:hover .trigger {
-            display: block;
-            padding-bottom: 5px;
-        }
-
-        .page-link {
-            line-height: $base-line-height;
-            display: block;
-            padding: 5px 10px;
-        }
-
-        .current {
-            background-color: $grey-color-dark;
-            color: #ffffff;
-        }
-
-        .menu-download {
-            background-image: none;
-        }
-    }
-}
-
-
-/**
- * Documentation header
- */
-.doc-header {
-    background-color: $grey-color;
-    color: #ffffff;
-    padding: ($spacing-unit / 4) 0;
-
-    h2 {        
-        font-weight: bold;
-        font-size: $base-font-size;
-        margin-bottom: 0;
-        cursor: pointer;
-        padding-right: 10px;
-    }
-    h2:after {
-        content: '';
-        display: inline-block;
-        width: 0;
-        height: 0;
-        border-style: solid;
-        border-width: 5px 0 5px 8.7px;
-        border-color: transparent transparent transparent #ffffff;
-    }
-
-    h3 {        
-        font-weight: bold;
-        font-size: $base-font-size;
-        margin-bottom: 5px;
-    }
-
-    .doc-sections { 
-        margin-left: -$spacing-unit / 2;
-        margin-top: $spacing-unit / 2;
-        @extend %clearfix;
-    }
-
-    .doc-section {
-        float: left;
-        margin-bottom: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
-        width: -webkit-calc(25% - (#{$spacing-unit} / 2));
-        width:         calc(25% - (#{$spacing-unit} / 2));
-    }
-
-    .doc-section ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-    }
-
-    .doc-section li {
-        line-height: 1.1;
-        margin-bottom: 5px;
-    }
-
-    .doc-section a {
-        color: #ffffff !important;
-        font-weight: normal;
-    }
-}
-@include media-query($on-palm) {
-    .doc-header {
-        display: none;
-    }
+  @include breakpoint($bp-small) { max-width: $bp-small }
+  @include breakpoint($bp-medium) { max-width: $bp-medium }
+  @include breakpoint($bp-large) { max-width: $bp-large }
+  @include breakpoint($bp-xlarge) { max-width: $bp-xlarge }
 }
 
 /**
- * Site footer
+ * Main content
  */
-.site-footer {
-    border-top: 1px solid $grey-color-light;
-    padding: $spacing-unit 0;
-}
-
-.footer-message {
-    font-size: 15px;
-    color: $grey-color;
-    text-align: right;
-
-    a {
-        font-weight: normal;
-    }
+main {
+  max-width: 0.75 * $bp-xlarge;
+  @include padding-y(4);
 }
 
 /**
- * Page content
+ * Sidebars
  */
-.page-content {
-    padding: $spacing-unit 0;
+@include breakpoint($bp-large) {
+  .sidebar-container {
+    display: flex;
+    width: 100%;
+
+    main {
+      flex: 1 1 auto;
+      @include padding(left, 6);
+    }
+  }
 }
 
-.page-heading {
-    font-size: 20px;
+.sidebar {
+  @include margin-y(2);
+  @include padding-y(1);
+  @include padding-x(1);
+
+  @include breakpoint($bp-large) { 
+    display: block; 
+    width: $bp-xlarge / 4;
+    flex-shrink: 0;
+    @include margin-y(0);
+    @include padding-y(4);
+    @include padding(left, 0);
+    @include padding(right, 6);
+  }
 }
-
-.post-list {
-    margin-left: 0;
-    list-style: none;
-
-    > li {
-        margin-bottom: $spacing-unit;
-    }
-}
-
-.post-meta {
-    font-size: $small-font-size;
-    color: $grey-color;
-}
-
-.post-link {
-    display: block;
-    font-size: 24px;
-}
-
-
-
-/**
- * Posts
- */
-.post-header {
-    margin-bottom: $spacing-unit;
-}
-
-.post-title {
-    font-size: 42px;
-    letter-spacing: -1px;
-    line-height: 1;
-
-    @include media-query($on-laptop) {
-        font-size: 36px;
-    }
-}
-
-.post-content {
-    margin-bottom: $spacing-unit;
-
-    h2 {
-        font-size: 32px;
-
-        @include media-query($on-laptop) {
-            font-size: 28px;
-        }
-    }
-
-    h3 {
-        font-size: 26px;
-
-        @include media-query($on-laptop) {
-            font-size: 22px;
-        }
-    }
-
-    h4 {
-        font-size: 20px;
-
-        @include media-query($on-laptop) {
-            font-size: 18px;
-        }
-    }
-}
-
-
-/**
- * Home page
- */
-.home {
-    .hero-panel {
-        background: linear-gradient(to bottom, $grey-color-super-light 0%, $grey-color-light 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
-        padding: $spacing-unit / 2;
-        margin-bottom: $spacing-unit;
-
-        .hero-content {
-            color: $grey-color-dark;
-            font-size: $large-font-size ;
-        }
-
-        .hero-title {
-            color: #000000;
-            font-size: $large-font-size * 2;
-            font-weight: bold;
-        }
-    }
-
-    .panels-wrapper {
-        margin-left: -$spacing-unit / 2;
-        @extend %clearfix;
-    }
-
-    .panel {
-        float: left;
-        margin-bottom: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
-    }
-
-    .panel-col-1 {
-        width: -webkit-calc(33% - (#{$spacing-unit} / 2));
-        width:         calc(33% - (#{$spacing-unit} / 2));
-    }
-
-    .panel-col-2 {
-        width: -webkit-calc(33% - (#{$spacing-unit} / 2));
-        width:         calc(33% - (#{$spacing-unit} / 2));
-    }
-
-    .panel-col-3 {
-        width: -webkit-calc(33% - (#{$spacing-unit} / 2));
-        width:         calc(33% - (#{$spacing-unit} / 2));
-    }
-
-    @include media-query($on-palm) {
-        .panel {
-            float: none;
-            width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-            width:         calc(100% - (#{$spacing-unit} / 2));
-        }
-    }
-
-    a.front-link {
-        color: #ffffff;
-        display: inline-block;
-        margin: ($spacing-unit / 2) 0;
-        padding: ($spacing-unit / 4) ($spacing-unit / 2);
-        background: linear-gradient(to bottom, $grey-color 0%, $grey-color-dark 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
-
-        &:hover {
-            background-color: $grey-color-dark;
-            background-image: none;
-        }
-    }
-
-    .hero-panel a.front-link, .downloads-panel a.front-link {
-        background: linear-gradient(to bottom, $brand-color-light 0%, $brand-color 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
-        &:hover {
-            background-color: $brand-color-light;
-            background-image: none;
-        }
-    }
-
-    .hero-panel a.front-link { font-size: $large-font-size; }
-}
-
-
-/**
- * Special formatting
- */
-.release-download {
-    float: right;
-    font-size: $large-font-size;
-    margin: ($spacing-unit / 2) 0 ($spacing-unit / 2) ($spacing-unit / 2);    
-    text-align: center;
-
-    a {
-        color: #ffffff;
-        display: inline-block;
-        padding: $spacing-unit / 2;
-        background: linear-gradient(to bottom, $grey-color 0%, $grey-color-dark 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
-
-        &:hover {
-            background-color: $grey-color-dark;
-            background-image: none;
-        }
-    }
-}
-
-.doc-toc {
-    display: inline-block;
-    border: 1px solid $grey-color-light;
-    background: $grey-color-super-light;
-    margin: ($spacing-unit / 2) 0;
-    padding: ($spacing-unit / 4) ($spacing-unit / 2);
-
-    h4 {
-        font-size: $base-font-size; 
-        font-weight: bold;
-    }
-
-    ul { margin-bottom: 0; }
-    li { font-size: $small-font-size; }
-    a { font-weight: normal; }
-}
-
-.doc .note, .doc .warning, .doc .error {
-    padding: ($spacing-unit / 4) ($spacing-unit / 2) ($spacing-unit / 4) 40px;
-    margin: ($spacing-unit / 2) 0;
-    background-repeat: no-repeat;
-    background-position: 10px ($spacing-unit / 4);
-}
-.doc .note {
-    background-color: #DDEEFF;
-    background-image: url(../info.png);
-}
-.doc .warning { 
-    background-color: #FFFFDD;
-    background-image: url(../warning.png);
-}
-.doc .error {
-    background-color: #FFDDEE;
-    background-image: url(../error.png);
-}
-
-.doc .anchorjs-link {
-    color: $grey-color-light;
-    &:hover { text-decoration: none; }
-}
-
-.edit-docs {
-    font-size: $small-font-size;
-    margin: ($spacing-unit / 2) 0;
-
-    a, a:visited { 
-        color: $grey-color;
-        border-bottom: 1px dotted $grey-color;
-    }
-    a:hover {
-        color: $text-color;
-        text-decoration: none;
-        border-bottom: 1px solid $text-color;
-    }
-}
-
-.search-app {
-    form {
-        @include flexbox();
-        flex-flow: row no-wrap;
-        justify-content: space-between;
-    }
-
-    input[type="text"] {
-        flex-grow: 1;
-    }
-
-    .results {
-        padding: $spacing-unit 0;
-        
-        ul { list-style: none; }
-        li { margin-bottom: $spacing-unit / 2; }
-        .result-title { 
-            font-weight: bold;
-        }
-        .result-label {
-            display: inline-block;
-            padding: 2px 5px;
-            border-radius: 3px;
-            font-size: $super-small-font-size;
-            font-weight: bold;
-            text-transform: uppercase;
-            background-color: $grey-color-dark;
-            color: $grey-color-super-light;
-        }
-    }
-}
-
