--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,19 +5,11 @@ lunr_exclude: true
 @charset "utf-8";
 
 
+// Typography (used in utils/typography)
+$base-font-family: "Helvetica Neue", Helvetica, Arial, Roboto, "Liberation Sans", sans-serif;
+$monospace-font-family: "Menlo", "Consolas", "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono", "Liberation Mono", monospace;
 
-// Our variables
-$base-font-family: Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$small-font-size:  $base-font-size * 0.875;
-$super-small-font-size:  $base-font-size * 0.7;
-$large-font-size: $base-font-size * 1.2;
-$base-line-height: 1.5;
-
-$spacing-unit:     30px;
-
-$table-padding:    0.3em;
-
+// Colours
 $text-color:       #111;
 $background-color: #fdfdfd;
 $brand-color:      #1144aa;
@@ -28,33 +20,24 @@ $grey-color-light: #cccccc;
 $grey-color-dark:  #666666;
 $grey-color-super-light: #eeeeee;
 
-// Width of the content area
-$content-width:    980px;
+$blue-color-light: #ddeeff;
+$blue-color: darken($blue-color-light, 50%);
 
-$on-palm:          600px;
-$on-laptop:        800px;
+$yellow-color-light: #ffffdd;
+$yellow-color: darken($yellow-color-light, 50%);
 
-
-
-// Using media queries with like this:
-// @include media-query($on-palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
-@mixin media-query($device) {
-    @media screen and (max-width: $device) {
-        @content;
-    }
-}
-
-
+$red-color-light: #ffddee;
+$red-color: darken($red-color-light, 50%);
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
-        "base",
-        "flexbox",
-        "layout",
-        "syntax-highlighting"
-;
+  "vendor/sanitize.css/sanitize",
+  "vendor/sanitize.css/forms",
+  "util/typography",
+  "util/spacing",
+  "util/media",
+  "util/grid",
+  "base",
+  "layout",
+  "components",
+  "syntax-highlighting";
