--- a/_sass/util/_typography.scss
+++ b/_sass/util/_typography.scss
@@ -1,6 +1,11 @@
 // Emoji fonts
 $emoji-font-family: "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 
+// System fonts
+$system-font-family: system-ui, -apple-system, "Segoe UI", "Roboto", "Ubuntu",
+  "Cantarell", "Noto Sans", sans-serif, $emoji-font-family;
+
+
 // Font sizes
 $font-xsmall: 0.75rem;
 $font-small: 0.875rem;
