--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  {% include "head.html" %}
 
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
@@ -32,7 +32,7 @@
       </symbol>
     </svg>
 
-    {% include header.html %}
+    {% include "header.html" %}
 
     <div class="page-content">
       <div class="wrapper">
@@ -41,7 +41,7 @@
             <div class="sidebar" x-data="{ open: false }">
             
               <nav class="doc-doctree">
-              {% include doctree.html title='h2' title_widget=true section_widget=true %}
+              {% include "doctree.html" title='h2' title_widget=true section_widget=true %}
               </nav>
             </div>
           {% endunless %}
@@ -57,7 +57,7 @@
 
             {% if site.github.repository_url %}
             <footer class="edit-docs">
-            <a href="{% github_edit_link %}" title="">Edit this page in GitHub</a>
+            <a href="https://github.com/simpleid/simpleid.github.io/edit/master/{{ page.inputPath }}" title="">Edit this page in GitHub</a>
             </footer>
             {% endif %}
 
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    {% include footer.html %}
+    {% include "footer.html" %}
 
     <script type="text/javascript">
         // Add anchors
