--- a/_layouts/html.html
+++ b/_layouts/html.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+  {% include "head.html" %}
 
   <body>
 
-    {% include header.html %}
+    {% include "header.html" %}
 
     <div class="page-content">
       {{ content }}
     </div>
 
-    {% include footer.html %}
+    {% include "footer.html" %}
 
   </body>
 
