--- a/api/current-version.txt.liquid
+++ b/api/current-version.txt.liquid
@@ -1,3 +1,4 @@
 ---
+permalink: api/current-version.txt
 ---
 {% for post in site.categories.release limit:1 %}{{ post.release_version }}{% endfor %}
