--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset=utf-8>
+    <meta charset="utf-8">
     <title>Redirecting...</title>
-    <link rel=canonical href="{{ redirect }}">
-    <meta http-equiv=refresh content="0; url={{ redirect }}">
+    <link rel="canonical" href="{{ redirect }}">
+    <meta http-equiv="refresh" content="0; url={{ redirect }}">
   </head>
   <body>
     <h1>Redirecting...</h1>
