--- a/api/current-version.txt.liquid
+++ b/api/current-version.txt.liquid
@@ -1,4 +1,5 @@
 ---
 permalink: api/current-version.txt
 ---
-{% for post in site.categories.release limit:1 %}{{ post.release_version }}{% endfor %}
+{%- assign releases = collections.release | reverse -%}
+{% for post in releases limit:1 %}{{ post.data.release_version }}{% endfor %}
