--- a/rss.xml.liquid
+++ b/rss.xml.liquid
@@ -12,18 +12,16 @@ layout: null
     <pubDate>{{ site.posts | getNewestCollectionItemDate | date_to_rfc822 }}</pubDate>
     <lastBuildDate>{{ site.posts | getNewestCollectionItemDate | date_to_rfc822 }}</lastBuildDate>
     <generator>Eleventy</generator>
-    {% for post in site.posts limit:10 %}
+    {%- assign posts = collections.all | reverse -%}
+    {% for post in posts limit:10 %}
       <item>
-        <title>{{ post.title | xml_escape }}</title>
-        <description>{{ post.content | xml_escape }}</description>
+        <title>{{ post.data.title | xml_escape }}</title>
+        <description>{{ post.templateContent | xml_escape }}</description>
         <pubDate>{{ post.date | date_to_rfc822 }}</pubDate>
         <link>{{ post.url | prepend: site.baseurl | prepend: site.url }}</link>
         <guid isPermaLink="true">{{ post.url | prepend: site.baseurl | prepend: site.url }}</guid>
-        {% for tag in post.tags %}
+        {% for tag in post.data.tags %}
         <category>{{ tag | xml_escape }}</category>
-        {% endfor %}
-        {% for cat in post.categories %}
-        <category>{{ cat | xml_escape }}</category>
         {% endfor %}
       </item>
     {% endfor %}
