Fix metadata variables

--- a/_layouts/release.html
+++ b/_layouts/release.html
@@ -3,7 +3,7 @@ layout: post
 ---
 
 <div class="release-download">
-    <a href="{{ page.download_url }}">{{ page.download_title }}</a>
+    <a href="{{ download_url }}">{{ download_title }}</a>
 </div>
 
 
