--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -48,7 +48,7 @@
           <main class="post doc">
 
             <header class="post-header">
-              <h1 class="post-title">{{ page.title }}</h1>
+              <h1 class="post-title">{{ title }}</h1>
             </header>
 
             <article class="post-content">
