--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -57,7 +57,7 @@
 
             {% if site.github.repository_url %}
             <footer class="edit-docs">
-            <a href="https://github.com/simpleid/simpleid.github.io/edit/master/{{ page.inputPath }}" title="">Edit this page in GitHub</a>
+            <a href="{{ site.github.reporitory_url }}/edit/master/{{ page.inputPath }}" title="">Edit this page in GitHub</a>
             </footer>
             {% endif %}
 
