--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -52,6 +52,12 @@
             </header>
 
             <article class="post-content">
+              {% if toc %}
+              <nav class="doc-toc">
+                <h4>Table of Contents</h4>
+                {{ content | toc: '{"ul": true, "wrapper": ""}' }}
+              </nav>
+              {% endif %}
               {{ content }}
             </article>
 
