--- a/_includes/doctree.html
+++ b/_includes/doctree.html
@@ -1,71 +1,64 @@
-{%- if include.doctree -%}
-    {%- assign doctree = site.data[include.doctree] -%}
-{%- else -%}
-    {%- assign doctree = site.data[page.doctree] -%}
-{%- endif -%}
+{%- assign sections = collections.all | eleventyNavigation: key  -%}
 
-{%- if include.section_headings -%}
+{%- if section_headings -%}
   {%- assign section_tag = 'div' -%}
-  {%- capture section_title_tag -%}h{{ include.section_headings }}{%- endcapture -%}  
-  {%- if include.title -%}
-    {%- capture title_tag -%}h{{ include.section_headings | minus: 1 }}{%- endcapture -%}
+  {%- capture section_title_tag -%}h{{ section_headings }}{%- endcapture -%}  
+  {%- if doc_title -%}
+    {%- capture doc_title_tag -%}h{{ section_headings | minus: 1 }}{%- endcapture -%}
   {%- endif -%}
 {%- else -%}
   {%- assign section_tag = 'li' -%}
   {%- assign section_title_tag = 'div' -%}
-  {%- if include.title -%}
-    {%- capture title_tag -%}{{ include.title }}{%- endcapture -%}
+  {%- if doc_title -%}
+    {%- capture doc_title_tag -%}{{ title }}{%- endcapture -%}
   {%- endif -%}
 {%- endif -%}
 
-
-{% if include.title %}
-  <{{ title_tag }} class="doc-title" {% if include.title_widget %}x-on:click="open = !open"{% endif %}>
-    {%- if include.section_widget -%}
+{% if doc_title %}
+  <{{ doc_title_tag }} class="doc-title" {% if title_widget %}x-on:click="open = !open"{% endif %}>
+    {%- if section_widget -%}
       <div class="doc-title-expander" x-bind:class="{ 'doc-title-expander-open': open }">
         <svg viewBox="0 0 24 24"><use xlink:href="#svg-expander"></use></svg>
       </div>
     {%- endif -%}
-    <span>{{ doctree.title }}</span>
-  </{{ title_tag }}>
+    <span>{{ sections[0].parent }}</span>
+  </{{ doc_title_tag }}>
 {% endif %}
 
-<div class="doc-sections" {% if include.title_widget %}x-bind:class="{ 'doc-sections-open': open }"{% endif %}>
-  {%- unless include.section_headings -%}
+<div class="doc-sections" {% if title_widget %}x-bind:class="{ 'doc-sections-open': open }"{% endif %}>
+  {%- unless section_headings -%}
   <ul>
   {%- endunless -%}
-    {% for section in doctree.sections %}
+    {% for section in sections %}
       {%- assign section_current = false -%}
       {%- assign page_id_size = page.url | size | minus: 1 -%}
       {%- assign page_id = page.url | slice: 0, page_id_size | remove_first: "/docs/" -%}
       {%- if section.docs contains page_id -%}
         {%- assign section_current = true -%}
       {%- endif -%}
-      <{{ section_tag }} class="doc-section" {% if include.section_widget %}x-data="{ open: {{section_current}} }" x-bind:class="{ 'doc-section-current': open }"{% endif %}>
+      <{{ section_tag }} class="doc-section" data-key="{{ section.key }}" data-order="{{ section.order }}" {% if section_widget %}x-data="{ open: {{section_current}} }" x-bind:class="{ 'doc-section-current': open }"{% endif %}>
         <{{ section_title_tag }} class="doc-section-title"
-          {% if include.section_headings %}id="{{ section.title | slugify }}"{% endif %}
-          {% if include.section_widget %}x-on:click="open = !open"{% endif %}
+          {% if section_headings %}id="{{ section.title | slugify }}"{% endif %}
+          {% if section_widget %}x-on:click="open = !open"{% endif -%}
         >
-          {% if include.section_widget %}<div class="doc-section-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-expander"></use></svg></div>{% endif %}
+          {%- if section_widget %}<div class="doc-section-expander"><svg viewBox="0 0 24 24"><use xlink:href="#svg-expander"></use></svg></div>{% endif %}
           <div class="doc-section-title-text">{{ section.title }}</div>
         </{{ section_title_tag }}>
 
-        <ul>
-          {% for item in section.docs %}
-            {%- assign item_url = item | prepend:"/docs/" | append:"/" -%}
-            {%- if item_url == page.url -%}
+<ul>
+          {%- for item in section.children %}
+            {%- if item.url == page.url -%}
               {%- assign item_class = "current" -%}
             {%- else -%}
               {%- assign item_class = "" -%}
             {%- endif -%}
-            {%- assign p = site.docs | where: "url", item_url | first -%}
-            <li class="doc-item {{ item_class }}"><a href="{{ p.url }}">{{ p.title }}</a></li>
-          {% endfor %}
+            <li class="doc-item {{ item_class }}" data-key="{{ item.key }}" data-order="{{ item.order }}"><a href="{{ item.url }}">{{ item.title }}</a></li>
+          {% endfor -%}
         </ul>
       </{{ section_tag }}>
     {% endfor %}
 
-  {%- unless include.section_headings -%}
+  {%- unless section_headings -%}
   </ul>
   {%- endunless -%}
 </div>
