--- a/_includes/doctree.html
+++ b/_includes/doctree.html
@@ -10,7 +10,7 @@
   {%- assign section_tag = 'li' -%}
   {%- assign section_title_tag = 'div' -%}
   {%- if doc_title -%}
-    {%- capture doc_title_tag -%}{{ title }}{%- endcapture -%}
+    {%- capture doc_title_tag -%}{{ doc_title }}{%- endcapture -%}
   {%- endif -%}
 {%- endif -%}
 
