--- a/api/releases.json.liquid
+++ b/api/releases.json.liquid
@@ -6,10 +6,10 @@ eleventyExcludeFromCollections: true
     "releases": [
         {% for post in collections.release reversed %}
         {
-            "id": {{ post.data.release_version | prepend: '-' | prepend: post.data.release_package | jsonify }},
-            "release_package": {{ post.data.release_package | jsonify }},
-            "package_series": {{ post.data.package_series | jsonify }},
-            "release_version": {{ post.data.release_version | jsonify }},
+            "id": {{ post.data.release_version | prepend: '-' | prepend: post.data.release_package | json }},
+            "release_package": {{ post.data.release_package | json }},
+            "package_series": {{ post.data.package_series | json }},
+            "release_version": {{ post.data.release_version | json }},
             "release_date": {{ post.date | date: '%s' }},
             "download_url": "{{ post.data.download_url }}",
             "announce_url": "{{ post.url | prepend: site.baseurl | prepend: site.url }}"
@@ -19,14 +19,14 @@ eleventyExcludeFromCollections: true
     "packages": [
         {% for release_package in release_packages %}
         {
-            "id": {{ release_package[0] | jsonify }},
+            "id": {{ release_package[0] | json }},
             "series": [
             {% for branch in release_package[1].series %}
             {
-                "package_series": {{ branch.package_series | jsonify }},
-                "title": {{ branch.title | jsonify }},
-                "repo_url": {{ branch.repo_url | jsonify }},
-                "status": {{ branch.status | jsonify }}
+                "package_series": {{ branch.package_series | json }},
+                "title": {{ branch.title | json }},
+                "repo_url": {{ branch.repo_url | json }},
+                "status": {{ branch.status | json }}
                 {% if branch.first_release %}
                 , "first_release": {{ branch.first_release | date: '%s' }}
                 {% endif %}
