--- a/rss.xml.liquid
+++ b/rss.xml.liquid
@@ -1,6 +1,6 @@
 ---
 permalink: rss.xml
-layout: null
+eleventyExcludeFromCollections: true
 ---
 <?xml version="1.0" encoding="UTF-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
